# ongrid-power-logger

./: Cargo.toml  Dockerfile  README.md  bootstrap_node_integration.patch  build.rs  config.yaml  default-devices.yaml  devices.yaml  docker-compose.yml  entrypoint.sh  register_nodes.sh  schema.sql  setup_env.sh
