[package]
name = "power-logger"
version = "0.1.0"
edition = "2021"

[dependencies]
libp2p = { version = "0.53.2", features = ["tokio", "gossipsub", "mdns", "macros", "tcp", "yamux", "noise", "ping", "rsa"] }
futures = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
ed25519-dalek = "1.0.1"
sha2 = "0.10"
candid = "0.9"
ic-cdk = "0.11"
public-ip = "0.2"
ic-agent = "0.29"
hex = "0.4"
rand = "0.8.5"
clap = { version = "4.4", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
aes-gcm = "0.10"
lapin = { version = "2.5.3", features = ["native-tls"] }
anyhow = "1.0"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
deadpool-postgres = "0.10"
tokio-postgres = "0.7"
dotenv = "0.15"
# Blockchain dependencies
ethers = { version = "2.0", features = ["legacy", "abigen"] }
log = "0.4"
env_logger = "0.10"
thiserror = "1.0"
isocountry = "0.3.2"


[build-dependencies]
ethers-contract-abigen = "2.0" # or latest version
